--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "express": "^4.21.2",
     "helmet": "^8.0.0",
     "mongoose": "^8.11.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "openai": "^4.86.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
