Add actions example

--- a/frontend/pixel-ai-frontend/tsconfig.json
+++ b/frontend/pixel-ai-frontend/tsconfig.json
@@ -21,7 +21,8 @@
     "baseUrl": "./src/",
     "paths": {
       "@/*": ["*", "app/*"],
-      "@/components/*": ["components/*"]
+      "@/components/*": ["components/*"],
+      "@/actions/*": ["actions/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
