--- a/frontend/pixel-ai-frontend/tsconfig.json
+++ b/frontend/pixel-ai-frontend/tsconfig.json
@@ -20,9 +20,7 @@
     ],
     "baseUrl": "./src/",
     "paths": {
-      "@/*": ["*", "app/*"],
-      "@/components/*": ["components/*"],
-      "@/actions/*": ["actions/*"]
+      "@/*": ["*", "app/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
